<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_stage_12"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@drawable/cloud"
        android:onClick="onStageButtonClick"
        android:text="@string/stage_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <Button
        android:id="@+id/btn_stage_11"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@drawable/cloud"
        android:onClick="onStageButtonClick"
        android:text="@string/stage_11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/btn_stage_10"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@drawable/cloud"
        android:onClick="onStageButtonClick"
        android:text="@string/stage_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <Button
        android:id="@+id/btn_stage_09"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@drawable/cloud"
        android:onClick="onStageButtonClick"
        android:text="@string/stage_09"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/btn_stage_08"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@drawable/cloud"
        android:onClick="onStageButtonClick"
        android:text="@string/stage_08"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <Button
        android:id="@+id/btn_stage_07"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@drawable/cloud"
        android:onClick="onStageButtonClick"
        android:text="@string/stage_07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.709"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359" />

    <Button
        android:id="@+id/btn_stage_06"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@drawable/cloud"
        android:onClick="onStageButtonClick"
        android:text="@string/stage_06"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448" />

    <Button
        android:id="@+id/btn_stage_05"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@drawable/cloud"
        android:onClick="onStageButtonClick"
        android:text="@string/stage_05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <Button
        android:id="@+id/btn_stage_04"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@drawable/cloud"
        android:onClick="onStageButtonClick"
        android:text="@string/stage_04"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654" />

    <Button
        android:id="@+id/btn_stage_03"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@drawable/cloud"
        android:onClick="onStageButtonClick"
        android:text="@string/stage_03"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <Button
        android:id="@+id/btn_stage_02"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@drawable/cloud"
        android:onClick="onStageButtonClick"
        android:text="@string/stage_02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833" />

    <Button
        android:id="@+id/btn_stage_01"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@drawable/cloud"
        android:onClick="onStageButtonClick"
        android:text="@string/stage_01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

</androidx.constraintlayout.widget.ConstraintLayout>