<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StageActivity">

    <TextView
        android:id="@+id/tv_stage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="test1"
        android:textColor="#000000"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_video"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/green_btn"
            android:gravity="center"
            android:onClick="onVideoButtonClick"
            android:text="@string/video" />

        <Button
            android:id="@+id/btn_part_1"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/green_btn"
            android:gravity="center"
            android:onClick="onPartButtonClick"
            android:text="@string/part_1" />

        <Button
            android:id="@+id/btn_part_2"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/green_btn"
            android:gravity="center"
            android:onClick="onPartButtonClick"
            android:text="@string/part_2" />

        <Button
            android:id="@+id/btn_exam"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/green_btn"
            android:gravity="center"
            android:onClick="onExamButtonClick"
            android:text="@string/exam" />
    </LinearLayout>
</LinearLayout>