<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PartActivity">

    <TextView
        android:id="@+id/tv_stage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/tv_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"/>

    <ListView
        android:id="@+id/lv_sentences"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ListView
        android:id="@+id/lv_words"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_matching"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/green_btn"
        android:onClick="onMatchingButtonClick"
        android:text="@string/matching" />

    <Button
        android:id="@+id/btn_blank"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/green_btn"
        android:onClick="onBlankButtonClick"
        android:text="@string/blank" />

    <Button
        android:id="@+id/btn_arrange"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/green_btn"
        android:onClick="onArrangeButtonClick"
        android:text="@string/arrange" />
</LinearLayout>